added jsf pages (not perfect, some not working yet), added converters, added list producers for brands and models (get by brand missing yet), added maven dependency for faces

--- a/auto-bazaar-web/src/main/webapp/index.xhtml
+++ b/auto-bazaar-web/src/main/webapp/index.xhtml
@@ -5,6 +5,10 @@
    xmlns:h="http://java.sun.com/jsf/html"
    template="/WEB-INF/templates/default.xhtml">
    <ui:define name="content">
-       <a href="members.jsf">Member registration</a>
+       <a href="members.jsf">Member registration</a><br />
+       <a href="create-account.jsf">Account Creation</a><br />
+       <a href="advert-form.jsf">Advertising creation / editing</a><br />
+       <a href="brands.jsf">Brands</a><br />
+       <a href="models.jsf">Models</a><br />
    </ui:define>
 </ui:composition>
